--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,9 @@ body{
     font-family: 'Orbitron', sans-serif;
     font-weight: bolder;
 }
+.btn-hover{
+    backgound: black;
+}
 
 .underline {
     color: greenyellow;
