--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body{
     text-align: center;
     background-size: cover;
     font-family: 'Orbitron', sans-serif;
+    margin: cover:
 }
 #hero {
     color: #82a5ca;
